# elaspic-webserver

./: .gitignore  .gitlab-ci.yml  README.md  celerybeat-schedule.bak  conda_env.txt  conftest.py  create_conda_env.sh  environment.yml  index.wsgi  manage.py  package.json  provision.sh  pyproject.toml  requirements.txt  requirements_pip.txt  setup.cfg  setup.py
.benchmarks/Linux-CPython-3.8-64bit/: 0001_initial.json
.gitlab/conda/: meta.yaml
.gitlab/docker/: Dockerfile  entrypoint  logconfig.ini
_install/: apache_elaspic  celerybeat.conf  celeryd.conf  celeryd_config  create_views.sql  elaspic_webserver.conf  jobsubmitter.conf  ncbi-blast-2.2.29+-x64-linux.tar.gz.REMOVED.git-id
_vagrant/: Vagrantfile  install_python.sh  install_webserver.sh  provision.sh
conf/: create_views.sql  elaspic_webserver.conf  jobsubmitter.conf
db/: elaspic.sqlite.REMOVED.git-id
deploy/: create_conda_env.sh  provision.sh
deploy/docker/: Dockerfile
deploy/vagrant/: configure_apache.sh  install_webserver.sh
devtools/: sentry_release.sh
devtools/gitlab-ci/: sentry_release.sh
jobsubmitter/: .coverage  app.py  commands.sh  config.py  config_file_mysql.ini  elaspic_socket_server.py  jobsubmitter.py  jobsubmitter_elaspic.conf  main.py  submitjob_model.sh  submitjob_mutations.sh  submitjob_provean.sh  test_elaspic_socket_server.py
jobsubmitter/scripts/: database.py  database.sh  db_procedures.sql  local.py  local.py.2015-12-27  local.sh
jobsubmitter/tests/: conftest.py  jobsubmitter_input.json  test_qstat.py  test_throughput.py  test_upload_scripts.py
mum/: __init__.py  celeryapp.py  elaspic_config_file.ini  elaspic_config_file_old.ini  processors.py  settings (desk02's conflicted copy 2014-12-04).py  settings.py  urls.py  views.py  wsgi.py
mum/settings/: base.py
mum/static/: download
mum/templates/: base.html  configTemp.ini  email.html  generic.html  import.html  in.html  jmolpopup.html  mIn.html  query.html  res.html  result.html  result2.html  result2_head.html  result_head.html  sIn.html  test.html
notebooks/: 01_rerun_failed.ipynb  09_usage_statistics.ipynb  rerun_failed.ipynb
static/: atomsize.txt  charge.txt  download
static/css/: 2dprotein.css  fonts_old.css  in.css  result2.css  sIn.css
static/js/: 1691430.html  in.js  jquery.ajaxfileupload.js  jquery.tablesorter.js  jquery.tablesorter.min.js  mIn.js  result.js  result2.js  test.html
static/jsmol/: images.htm
tests/: conftest.py  jobsubmitter_input.json  test_elaspic_socket_client.py  test_filemanager.py  test_functions.py  test_views.py  test_views_json.py
vagrant/: Vagrantfile  configure_apache.sh  install_python.sh  install_webserver.sh  provision.sh
vagrant/deploy/: deployment.rst  index.html  interfaces
web_pipeline/: __init__.py  cleanupmanager.py  conf.py  elaspic_snippets.py  elaspic_socket_client.py  filemanager.py  filemanager.py.bak  functions.py  functions.py.bak  jobsubmitter.py  jobsubmitter_async.py  models.py  models.py.orig  sleep.py  tasks.py  tasks.py.2015-12-29  tasks.py.bak  urls.py  utils.py  views.py  views_import.py  views_json.py  views_json.py.orig
web_pipeline/migrations/: 0001_init.py  0001_initial.py  0002_auto_20160905_2052.py  0003_coremutationlocal_elaspic_version.py  0004_interfacemutationlocal_elaspic_version.py
web_pipeline/supl/: call_foldx.py  importIdentifiers.py  importUniprotIdentifiers.sql
web_pipeline/templates/: base.html  email.html  generic.html  import.html  in.html  jmolpopup.html  mIn.html  query.html  res.html  result.html  result2.html  result2_head.html  result_head.html  sIn.html  test.html  tooltip.html
web_pipeline/tests/: conftest.py  (+3 more)
(+213 files in other folders)
