[bumpversion]
files = setup.py .gitlab-ci.yml
current_version = 0.0.7.dev0
commit = True
tag = False
message = "Release {new_version}"
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	gamma

[tool:pytest]
DJANGO_SETTINGS_MODULE = mum.settings.pytest
addopts = 
	-sv --doctest-modules --cov=mum --cov=web_pipeline --cov=elaspic_rest_api
	--ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[flake8]
ignore = D100,D101,D102,D103,D105,E402
max-line-length = 99
exclude = .git,__pycache__,dist,web_pipeline/migrations

[yapf]
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = true
ALLOW_MULTILINE_DICTIONARY_KEYS = true
ALLOW_MULTILINE_LAMBDAS = true
BASED_ON_STYLE = pep8
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
COALESCE_BRACKETS = true
COLUMN_LIMIT = 99
CONTINUATION_INDENT_WIDTH = 4
EACH_DICT_ENTRY_ON_SEPARATE_LINE = false
SPACES_BEFORE_COMMENT = 2
SPLIT_BEFORE_FIRST_ARGUMENT = true
SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = true
SPLIT_BEFORE_DICT_SET_GENERATOR = false
SPLIT_BEFORE_NAMED_ASSIGNS = false
split_before_logical_operator = false

