[bumpversion]
files = setup.py .gitlab-ci.yml
current_version = 0.0.8
commit = True
tag = False
message = "Release {new_version}"
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:part:release]
optional_value = gamma
values = 
	dev
	gamma

[tool:pytest]
python_files = test_*.py
addopts =
	-sv --doctest-modules --cov=mum --cov=web_pipeline --cov=elaspic_rest_api
	--ignore=setup.py
	--ignore=elaspic_rest_api/tests/test_upload_scripts.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[flake8]
ignore = D100,D101,D102,D103,D105,E402
max-line-length = 100
exclude = .git,__pycache__,dist,web_pipeline/migrations
